2008-05-31  Bruno Haible  <bruno@clisp.org>

	Remove NeXTstep support.
	* SUMMARY: Remove mention of NeXTstep.
	* lispbibl.d (UNIX_NEXTSTEP, NEXTSTEP_CHS): Remove macros.
	* charstrg.d: Remove NEXTSTEP_CHS special casing.
	* io.d: Likewise.
	* eval.d (interpret_bytecode): Drop UNIX_NEXTSTEP conditional.
	* lightning.c (LD, LR): Likewise.
	* misc.d (MACHINE-TYPE): Likewise.
	* spvw.d (init_memory): Likewise.
	* unix.d: Likewise.

	* nls_nextstep.c: Remove file.
	* pseudofun.d (nls_nextstep_table): Remove.
	* makemake.in (NLS_INCLUDES): Remove nls_nextstep.
	* utils/unicode/Makefile (ALL): Remove nls_nextstep.c.
	(nls_nextstep.c): Remove rule.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/gettimeofday.m4 (CL_GETTIMEOFDAY): Remove test for the prototype.
	* unix.d (gettimeofday): Assume the declaration in <sys/time.h>.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/gethostbyname.m4 (CL_GETHOSTBYNAME): Remove test for sun/netdb.h.
	* unix.d: When gethostbyname exists, assume <sys/socket.h> and <netdb.h>
	exist.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_FPU_CONTROL invocation.
	* m4/fpu_control.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_PROG_CP invocation.
	* m4/cp.m4: Remove file.
	* m4/ln.m4 (CL_PROG_LN): Assume "cp -p" works on Unix.
	* makemake.in (CP): Likewise.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/closedir.m4 (CL_CLOSEDIR): Remove check for the prototype.
	Don't define RETCLOSEDIRTYPE any more.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_VOID invocation.
	* m4/general.m4 (CL_FFCALL_COMMON_TRAMPOLINE): Likewise.
	* m4/cc-void.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_CC_NEED_CCPAUX invocation.
	* m4/cc-cppaux.m4: Remove file.
	* makemake.in (CC_NEED_CCPAUX, XCC_NEED_CCPAUX): Remove variables.
	(*asm*.c): Fix dependency to use XASMCCPAUX.

2008-05-31  Bruno Haible  <bruno@clisp.org>
